# Kode-rs

./: .gitignore  ARCHITECTURE_SUMMARY.md  Cargo.toml  KODE_RUST_PORT_INVENTORY.md  QUICK_START_GUIDE.md  README.md  rustfmt.toml
agent/: FINAL_SESSION_SUMMARY.md  PORTING_PLAN.md  PROGRESS_SUMMARY.md  SESSION_5_SUMMARY.md  SESSION_SUMMARY_2025-10-19.md  SESSION_SUMMARY_2025-10-19_SESSION2.md  SESSION_SUMMARY_2025-10-19_SESSION3.md  SESSION_SUMMARY_2025-10-19_SESSION4.md  SESSION_SUMMARY_2025-10-19_SESSION5.md  SESSION_SUMMARY_2025-10-19_SESSION6.md  SESSION_SUMMARY_2025-10-19_SESSION7.md  TODO.md  TUI_ARCHITECTURE.md
src/: error.rs  lib.rs  main.rs  messages.rs
src/agents/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs  models.rs  settings.rs
src/services/: anthropic.rs  mod.rs  openai.rs
src/services/adapters/: mod.rs
src/services/streaming/: anthropic_stream.rs  mod.rs  openai_stream.rs  sse_parser.rs
src/tools/: bash.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  memory_read.rs  memory_write.rs  mod.rs  think.rs  todo_write.rs  tool_trait.rs  url_fetcher.rs
src/tui/: app.rs  app_old.rs  event.rs  mod.rs  terminal.rs
src/tui/ui/: input.rs  layout.rs  message.rs  mod.rs  status.rs
