[package]
name = "kode-rs"
version = "0.1.0"
edition = "2021"
authors = ["Khong Trung <khongtrunght@example.com>"]
license = "Apache-2.0"
description = "AI-powered terminal assistant (Rust port of Kode)"
homepage = "https://github.com/khongtrunght/Kode-rs"
repository = "https://github.com/khongtrunght/Kode-rs"
readme = "README.md"
keywords = ["cli", "ai", "assistant", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "kode"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"
pin-project = "1"

# HTTP clients
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
axum = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
toml_edit = "0.22"

# Error handling
anyhow = "1"
thiserror = "1"
color-eyre = "0.6"

# Code analysis
tree-sitter = "0.24"
tree-sitter-bash = "0.23"
tree-sitter-highlight = "0.24"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
indexmap = { version = "2", features = ["serde"] }
itertools = "0.13"
wildmatch = "2"
nucleo-matcher = "0.3"
similar = "2"
bytes = "1"
base64 = "0.22"
regex = "1"
shlex = "1"

# File operations
walkdir = "2"
ignore = "0.4"
notify = "7"

# HTML/Markdown
html5ever = "0.29"
markup5ever_rcdom = "0.3"
pulldown-cmark = "0.12"

# Config/env
dirs = "5"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Other
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
atty = "0.2"

[dev-dependencies]
# Testing
tokio-test = "0.4"
insta = { version = "1", features = ["yaml"] }
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
wiremock = "0.6"
vt100 = "0.15"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
